fixed layout bug when only small images are returned

--- a/public/assets/stylesheets/global.css
+++ b/public/assets/stylesheets/global.css
@@ -189,7 +189,10 @@ main {
 }
 
 .pic-area {
-  width: 95vw;
+  width:  -webkit-fill-available;
+  width: -moz-available;
+  width: fill-available;
+  max-width: 95%;
   display: grid;
   grid-template-columns: 49% 49% ;
   margin: auto;
@@ -263,10 +266,10 @@ main {
 }
 
 .arrow-back{
-  left: .2rem;
+  left: 1.0rem;
 }
 .arrow-forward {
-  right: .2rem;
+  right: 1.0rem;
 }
 
 .arrow-back:hover,
@@ -485,6 +488,12 @@ modal-caption {
     font-size: 2.75vw;
   }
 
+    .pic-area {
+      grid-template-columns: 25% 25% 25% 25%;
+      grid-gap: 0.3rem;
+    }
+  
+
 
 }
 
@@ -521,6 +530,11 @@ modal-caption {
 }
 
   @media (orientation: landscape) {
+
+  .modal-close-x {
+    height: 2.5rem;
+  }
+
   .carousel-content {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
@@ -529,7 +543,7 @@ modal-caption {
   }
 
   .modal-img {
-    max-width: 45vw;
+    max-width: 40vw;
     grid-area: 1 / 2 / 2 / 2;
   }
 
