--- a/public/assets/stylesheets/search-page.css
+++ b/public/assets/stylesheets/search-page.css
@@ -1,3 +1,5 @@
+/* this file is to overide main layout on search-page */
+
 @media(min-width: 769px) {
   main {
     display: grid;
@@ -9,19 +11,4 @@
   .rover-card {
     grid-area: 1 / 1 / 2 / 2;
   }
-
-  .pic-area {
-    grid-area: 1 / 2 / 2 / 3;
-    max-width: 95%;
-    width: auto;
-  }
-
 }
-
-/* @media(min-width: 880px) {} */
-@media(min-width: 1025px) {
-  .pic-area {
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-gap: 0.3rem;
-  }
-} 
